# HADB

Developer Workbench/: HADB.pro  client.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Disk Node/: CMakeLists.txt  Clientapp.h  Create.h  Drop.h  Huff.h  Insert.h  ParseJson.h  Selectall.h  Server
Master Engine/: B_node.h  Btree.h  CMakeLists.txt  indices.h  main.cpp
Query Executor/: CMakeLists.txt  Clientapp.h  JsonCreator.h  SQL.h  main.cpp
